BFAST -- History of visible changes.

Copyright (C) 2008, University of California - Los Angeles
See COPYING for copying conditions.

Please send bfast bug reports to nhomer@cs.ucla.edu

Version 0.1.12
* Updated bpreprocess help message.
* Updated bindexhist and bindexdist for color space.

Version 0.1.11
* bpostprocess now prints out MAF that complies with UCSC standards.

Version 0.1.10
* bmatches supports only matching to the forward strand.  This 
facilitates aligning methylated sequences.
* bpreprocess bug fixed when using an exons file.
* bevalsim now requires knowing paired end info and the original
reads file generated by bgeneratereads.
* fixed bug in bgeneratereads and bevalsim for paired end data.
* Fixed bugs in AlignEntryRead where the contig name was not being
read properly.

Version 0.1.9
* Updated bmf output to properly display when the maximum number
of matches has been reached.
* bmfconvert does not require paired end argument.
* Now supports trimming whitespace including carriage return on the
ends of the reads, mainly to support reads made on Windows machines.
* Updated butil binaries.

Version 0.1.8
* Updated to support Ns in the reads; will still ignore "."s.
* Adjusting bounds bug with -e option fixed.  Would not default to 
the correct end position.
* Updated command line parsing to avoid memory leaks.

Version 0.1.7
* Update bpostprocess for paired end support: now tested.
* Added support for filtering each end by score for paired end reads.
* Removed extra "." in inversions file (bpostprocess).
* Updated btestindexes against small bugs and added optimizations.
* Added bgeneratedistribution to calculate error distributions.

Version 0.1.6
* bgeneratereads was not producing SNPs and errors properly.
* bmatches now supresses timing output when -t is not specified.
* bpreprocess memory leaks fixed.

Version 0.1.5
* Fixed bug in bpreprocess where the program crashed right before terminating.

Version 0.1.4 