@@ -26,7 +26,8 @@ void RGIndexRead(FILE*, RGIndex*, int32_t);
 void RGIndexPrintInfo(char*);
 void RGIndexPrintHeader(FILE*, RGIndex*, int32_t);
 void RGIndexReadHeader(FILE*, RGIndex*, int32_t);
-void RGIndexGetRanges(RGIndex*, RGBinary*, char*, int32_t, int8_t, int32_t, int32_t, RGRanges*);
+int64_t RGIndexGetRanges(RGIndex*, RGBinary*, char*, int32_t, int8_t, int32_t, int64_t*, int64_t*);
+void RGIndexGetRangesBothStrands(RGIndex*, RGBinary*, char*, int32_t, int32_t, int32_t, int32_t, int32_t, RGRanges*);
 int64_t RGIndexGetIndex(RGIndex*, RGBinary*, int64_t, int64_t, char*, int64_t*, int64_t*);
 void RGIndexSwapAt(RGIndex*, int64_t, int64_t);
 int64_t RGIndexGetPivot(RGIndex*, RGBinary*, int64_t, int64_t);
