@@ -33,8 +33,9 @@ bevalsim_SOURCES = \
 				   ../blib/RGIndex.c	../blib/RGIndex.h \
 				   ../blib/BLib.c	../blib/BLib.h \
 				   ../blib/RGBinary.c ../blib/RGBinary.h \
-				   ../blib/RGMatch.c ../blib/RGMatch.h \
 				   ../blib/RGRanges.c ../blib/RGRanges.h \
+				   ../blib/RGMatches.c ../blib/RGMatches.h \
+				   ../blib/RGMatch.c ../blib/RGMatch.h \
 				   ../blib/AlignEntries.c	../blib/AlignEntries.h \
 				   ../blib/AlignEntry.c	../blib/AlignEntry.h \
 				   bevalsim.c	bevalsim.h
